[package]
name = "ppp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-bigint = "0.4.4"
num-traits = "0.2.16"
pbkdf2 = "0.12.2"
regex = "1.9.5"
sha2 = "0.10.7"
tiny-bip39 = "1.0.0"
